vlib/v/checker/tests/type_coercion_err.vv
fn main() {
	// These are i64s that we want to assign to n
	u1 := i64(0x80000000)
	u2 := i64(0x10000000)
	v1 := i64(0x20000000)
	v2 := i64(0x40000000)
	// n1 is i64, n2 is int
	mut n1 := i64(0)
	mut n2 := 0
	n1 = u1 * v2 - u2 * v1
	n2 = u1 * v2 - u2 * v1
	println('${n1:x}')
	println('${n2:x}')
}
